# embd-ide

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  test.txt  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/workflows/: release.yml
assets/: embd.icns
crates/embd-app/: Cargo.toml
crates/embd-app/src/: assets.rs  git_panel.rs  main.rs  pdf_render.rs  search_modal.rs  terminal.rs  theme.rs  workspace_view.rs
crates/embd-commands/: Cargo.toml
crates/embd-commands/src/: lib.rs  registry.rs
crates/embd-core/: Cargo.toml
crates/embd-core/src/: error.rs  event.rs  lib.rs  types.rs
crates/embd-editor/: Cargo.toml
crates/embd-editor/src/: buffer.rs  cursor.rs  edit.rs  history.rs  languages.rs  lib.rs  syntax.rs
crates/embd-platform/: Cargo.toml
crates/embd-platform/src/: fs.rs  git.rs  lib.rs  search.rs  watcher.rs
crates/embd-settings/: Cargo.toml
crates/embd-settings/src/: data.rs  lib.rs  palette.rs  window.rs
crates/embd-workspace/: Cargo.toml
crates/embd-workspace/src/: lib.rs  project.rs  session.rs  settings.rs  tabs.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: AI-Features-Plan.md  File-Diagram-Plan.md  Themes.md  agentic-features.md  agentic-implementation-plan.md  deferred-items-plan.md  multi-window-plan.md  production-hardening-report.md  testing.md
docs/baselines/: g00-baseline.md  g00-completion.md  g01-baseline.md  g01-completion.md  g02-baseline.md  g02-completion.md  g03-baseline.md  g03-completion.md  g04-baseline.md  g04-completion.md  g05-baseline.md  g05-completion.md  g06-baseline.md  g06-completion.md  g07-baseline.md  g07-completion.md
docs/implementation-plan/: 00-foundation.md  01-security.md  02-resource-robustness.md  03-perf-backend.md  04-perf-frontend.md  05-knowledge-ux.md  06-code-quality.md  07-ux-polish.md  README.md
docs/superpowers/plans/: 2026-05-11-navbar-redesign.md
docs/superpowers/specs/: 2026-05-11-navbar-redesign-design.md
releases/: .gitignore  v(0.1.0)-v(0.1.2).md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.6.md
scripts/: build-dmg.sh  subset-icons.mjs  subset-simple-icons.mjs  test.sh
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  fs_commands.rs  lib.rs  session.rs  terminal.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/ai/: key_store.rs  mod.rs
src-tauri/src/modules/fs/: mod.rs
src-tauri/src/modules/git/: mod.rs
src-tauri/src/modules/graph/: mod.rs
src-tauri/src/modules/knowledge/: mod.rs
src-tauri/src/modules/log/: mod.rs
src-tauri/src/modules/menu/: mod.rs
src-tauri/src/modules/session/: mod.rs
src-tauri/src/modules/shell/: mod.rs
src-tauri/src/modules/symbols/: mod.rs
src-tauri/src/modules/window_mgr/: mod.rs
src-tauri/tests/: multi_window_state.rs
src/lib/: ChatPanel.svelte  Editor.svelte  FileSearch.svelte  FileTree.svelte  FileViewer.svelte  GitPanel.svelte  JSONViewer.svelte  MergeConflictInline.svelte  MergeConflictSideBySide.svelte  MergeEditor.svelte  Settings.svelte  Tabs.svelte  Terminal.svelte  Toolbar.svelte  fileIcons.ts  session.ts  stores.ts
src/lib/components/: Toast.svelte
src/lib/icons/: simple-icons-subset.json  vscode-icons-subset.json
src/lib/modules/: index.ts  mergeUtils.ts  persisted.ts  settingsSync.ts  terminalActions.ts  themes.ts
src/lib/settings/: SettingsWindow.svelte  searchIndex.ts
tests/: setup.ts
tests/mocks/: tauri.ts
tests/unit/ai/: agentPlan.test.ts  chatRenderer.test.ts  checkpoints.test.ts  (+13 more)
(+127 files in other folders)
