[package]
name = "embd"
version = "0.1.4"
description = "A lightweight AI-powered IDE"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
portable-pty = "0.8"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
base64 = "0.22"
trash = "5"
tauri-plugin-drag = "2.1.0"
