[package]
name = "embd-app"
version = "0.2.0"
edition = "2021"
description = "embd – a lightweight IDE built on GPUI"

[[bin]]
name = "embd"
path = "src/main.rs"

[dependencies]
embd-core = { path = "../embd-core" }
embd-editor = { path = "../embd-editor" }
embd-workspace = { path = "../embd-workspace" }
embd-platform = { path = "../embd-platform" }
embd-commands = { path = "../embd-commands" }

gpui = "0.2"
gpui-component = "0.5"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
portable-pty = "0.8"
flume = "0.11"
