[package]
name = "embd-editor"
version = "0.1.0"
edition = "2021"
description = "Editor core: rope buffer, cursors, selections, edits, undo/redo"

[dependencies]
embd-core = { path = "../embd-core" }
ropey = "1"
serde = { version = "1", features = ["derive"] }
tree-sitter = "0.25"
streaming-iterator = "0.1"

# Language grammars — versions pinned to match gpui-component 0.5
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-json = "0.24"
tree-sitter-css = "0.23"
tree-sitter-html = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c = "0.24"

[dev-dependencies]
pretty_assertions = "1"
