[package]
name = "embd-settings"
version = "0.1.0"
edition = "2021"
description = "Settings data model, persistence, and settings window for embd"

[dependencies]
embd-core = { path = "../embd-core" }

gpui = "0.2"
gpui-component = "0.5"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
