[package]
name = "embd-workspace"
version = "0.1.0"
edition = "2021"
description = "Workspace model: project, file tree, tabs, session, settings"

[dependencies]
embd-core = { path = "../embd-core" }
embd-editor = { path = "../embd-editor" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
